--- a/frontend/src/app/componentes/listaparoquias/listaparoquias.component.html
+++ b/frontend/src/app/componentes/listaparoquias/listaparoquias.component.html
@@ -1,1 +1,19 @@
-<p>listaparoquias works!</p>
+<app-navbar></app-navbar>
+
+<div class="container">
+  <div class="row mt-3 mb-3">
+    <div class="col-12 text-center">
+      <h3>Selecione um Paroquia</h3>
+    </div>
+  </div>
+
+  <div class="row linhaParoquia" *ngFor="let ITEM of paginaParoquia.content">
+    <div class="col-12">
+      <a routerLink="">{{ ITEM.nome }}</a>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-12 text-center"></div>
+  </div>
+</div>
